<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">fydevtest</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="appid">2070</string>
    <string name="uid">spiderman</string>
    <string name="locale">DE</string>
    <string name="ip">109.235.143.113</string>
    <string name="key">1c915e3b5d42d05136185030892fbb846c278927</string>
    <string name="pubo">zacck is spiderman</string>
    <string name="bttext">Make Request!</string>
    <string name="baseurl_json">http://api.sponsorpay.com/feed/v1/offers.json</string>
    <string name="offer_types">112</string>

</resources>
