<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.zacck.fydevtest.MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="uid" />

    <EditText
        android:id="@+id/etUid"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/uid"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="API KEY" />

    <EditText
        android:id="@+id/etKey"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:password="true"
        android:layout_weight="1"
        android:text="@string/key"
        android:ems="10" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="AppId" />

    <EditText
        android:id="@+id/etAppid"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/appid"
        android:layout_weight="1"
        android:ems="10" />

    <TextView
        android:id="@+id/tvp"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="Pub0" />

    <EditText
        android:id="@+id/etPubO"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/pubo"
        android:layout_weight="1"
        android:ems="10" />

    <Button
        android:id="@+id/btRequest"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/bttext" />

</LinearLayout>